# deep-blue-sky

./: .gitignore  README.md  bot-wrapper.sh  deep-blue-sky.py  deep-blue-sky.service  deep-blue-sky.sh  deep_blue_sky.py  deepbluesky.py  main.py  pylintrc  pyproject.toml  setup.cfg  tiefblauer-himmel.py
src/: tiefblauer-himmel.py
src/deepbluesky/: __init__.py  __main__.py  command.py  deepbluesky.py  space.py  text.py  wiki.py
