[metadata]
name = deep-blue-sky
version = 0.0.1
author = Leo Izen
author_email = leo.izen+deepbluesky@gmail.com
description = Python discord bot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thebombzen/deep-blue-sky
project_urls =
    Bug Tracker = https://github.com/thebombzen/deep-blue-sky/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
